overflow fix

--- a/index.css
+++ b/index.css
@@ -131,7 +131,10 @@ h1,h2,h3,h4,h5,h6,p,span,div {
     color: white;
 }
 
-
+.nav-relative{
+    position: relative;
+    width: 100%;
+}
 
 /* nav styles */
 .nav-wrapper{
@@ -139,9 +142,9 @@ h1,h2,h3,h4,h5,h6,p,span,div {
    height: 100px;
    border-bottom: 1px solid #E0E0E0;
    background-color: white;
-   position: sticky;
+   position: fixed;
    top: 0;
-    z-index: 100;
+ z-index: 100;
 }
 .nav-container{
     display: flex;
@@ -223,10 +226,10 @@ h1,h2,h3,h4,h5,h6,p,span,div {
 .mockup-section-right{
     background: url("./assets/mockup.png") no-repeat center center / contain;
     width: 70%;
-    height: 110%;
+    height: 120%;
     position: absolute;
     top : -100px;
-    right: -199px;
+    right: -300px;
     opacity: 0.8;
     z-index: -1;
 }
